--- a/src/assets/partials/_general.scss
+++ b/src/assets/partials/_general.scss
@@ -19,6 +19,7 @@ html {
    text-transform: uppercase;
    border: transparent;
    cursor: pointer;
+   font-weight: bold;
 }
 
 .btn-shark {
@@ -28,4 +29,5 @@ html {
 
 .btn-blue {
     background-color: #27aabe;
+    color: white;
 }
